Bug 442253 - KCM Defaults do not match kwin defaults
Summary: KCM Defaults do not match kwin defaults
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_nightcolor (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-10 09:49 UTC by David Edmundson
Modified: 2021-09-13 10:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2021-09-10 09:49:40 UTC
On a default boot night colour is disabled.

On opening the KCM the defaults button is already "enabled" implying we're from the defaults.

Pressing default now activates the night colour even though that was not the default before. This even automatically starts http requests to the location service without the user's explicit consent!
Comment 1 Bug Janitor Service 2021-09-10 10:31:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1053
Comment 2 David Edmundson 2021-09-10 22:26:08 UTC
Git commit 8f847087c178941d6c11996db40064b122b33c33 by David Edmundson.
Committed on 10/09/2021 at 22:25.
Pushed by davidedmundson into branch 'master'.

[libcolorcorrect] Sync night colour default values

The default value for active in the kcfg file inside kwin for colour
correction is false.

As we have a bridge that mirrors the config contents over DBus and
defaults hardcoded in a second format this has got out of sync.

This both leads to the default button being enabled/disabled incorrectly
on a fresh system and not working properly.

More important as geo-location is on by default this leads to http
requests being made without the user's explicit consent. A major bug.

M  +1    -1    libcolorcorrect/compositorcoloradaptor.h

https://invent.kde.org/plasma/plasma-workspace/commit/8f847087c178941d6c11996db40064b122b33c33
Comment 3 David Edmundson 2021-09-13 10:24:08 UTC
Git commit cfd55830571738958a2f98999ed0f5a692b153c3 by David Edmundson.
Committed on 13/09/2021 at 10:23.
Pushed by davidedmundson into branch 'Plasma/5.18'.

[libcolorcorrect] Sync night colour default values

The default value for active in the kcfg file inside kwin for colour
correction is false.

As we have a bridge that mirrors the config contents over DBus and
defaults hardcoded in a second format this has got out of sync.

This both leads to the default button being enabled/disabled incorrectly
on a fresh system and not working properly.

More important as geo-location is on by default this leads to http
requests being made without the user's explicit consent. A major bug.

M  +1    -1    libcolorcorrect/compositorcoloradaptor.h

https://invent.kde.org/plasma/plasma-workspace/commit/cfd55830571738958a2f98999ed0f5a692b153c3