libcolorcorrect/compositorcoloradaptor.h
@@ -141,7 +141,7 @@ public:
     }
     bool activeDefault() const
     {
-        return true;
+        return false;
     }
 
     bool running() const
